Jade test. Begin renderer implementation.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "consolidate": "*",
     "uglify-js": "*",
-    "glob": "*",
-    "shortid": "*"
+    "glob": "*"
   },
   "devDependencies": {
     "mocha": "*",
